--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HelloWorld</title>
+  <title>Tennis Tune Up</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" class="js-site-favicon" href="assets/images/favicon.ico">
   <link href="assets/css/custom.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -32,7 +32,7 @@
                     <a class="nav-link text-uppercase" href="/expertise">expertise</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="#team">teams</a>
+                    <a class="nav-link text-uppercase" href="/dashboard-player">Dashboard</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-uppercase" href="#works">works</a>
